--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>La informatica</title>
 	<link rel="stylesheet" href="estilos.css">
-</head>
+	<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet"> 
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+</head> 
 <body>
 	<div class="loader" id="loader">
-		<div class="circ"></div>
+		<div id="circularG">
+			<div id="circularG_1" class="circularG"></div>
+			<div id="circularG_2" class="circularG"></div>
+			<div id="circularG_3" class="circularG"></div>
+			<div id="circularG_4" class="circularG"></div>
+			<div id="circularG_5" class="circularG"></div>
+			<div id="circularG_6" class="circularG"></div>
+			<div id="circularG_7" class="circularG"></div>
+			<div id="circularG_8" class="circularG"></div>
+		</div>
 	</div>
 	
 	<div class="wrapper">
@@ -55,7 +66,7 @@
 
 						<div class="im">
 							<div>
-								<img src="infor1.png" width="600px" alt="">
+								<img src="img/infor1.png" width="600px" alt="">
 							</div>
 						</div>
 					</div>
@@ -85,6 +96,8 @@
 									costado práctico y aplicado, vinculado con los dispositivos electrónicos.
 								</p>
 
+								<img src="img/infor4.jpg" width="500px" alt="">
+
 								<p>
 									Otros, en cambio, consideran como subdisciplinas de la informática a las Ciencias de la 
 									computación, la Ingeniería informática, los Sistemas de información, la Tecnología de la 
@@ -93,6 +106,16 @@
 									de la información a través de dispositivos electrónicos y sistemas computacionales, dotados 
 									estos últimos de tres funciones básicas: el ingreso de datos (entrada), el procesamiento de
 									datos y la transmisión de resultados (salida).
+								</p>
+
+								<p>
+									La Informática es la rama de la Ingeniería que estudia el hardware, las redes de datos y el software necesarios para tratar información de forma automática. Aunque pueda parecerte una definición muy abstracta, estamos seguros de que sabes mucho más de Informática de lo que crees. Y si no, sigue leyendo un poco más.Seguro que te suena qué es el hardware. Y si no te suena, seguro que has utilizado hardware en muchas ocasiones sin saber que se llama así. El hardware son los ordenadores de sobremesa, los portátiles, los tablets, los teléfonos móviles, las impresoras, las consolas de videojuegos, los lectores de DVDs, los reproductores de música, etcétera. ¿A que sí que sabías qué es el hardware? Lo que quizá no sabías es que estos aparatos están formados internamente por componentes electrónicos a los que también se les llama hardware: ¿te suenan el microprocesador, las tarjetas de memoria, las tarjetas gráficas, los discos duros o los acelerómetros? ¡Seguro que sí! Y aunque no los veas, hay miles de dispositivos llamados sistemas empotrados que ayudan a los coches a tomar mejor las curvas, a los aviones a volar en las peores condiciones atmosféricas o a los semáforos a controlar el tráfico de forma inteligente; también son hardware y también se estudian en Informática.
+								</p>
+
+								<img src="img/infor5.jpg" width="500px" alt="">
+
+								<p>
+									Además, hoy en día es difícil imaginar el hardware aislado. Casi todo el hardware está conectado a través de redes de datos. Seguro que conoces Internet, que es la mayor red de datos en el mundo. Millones de ordenadores, tablets, teléfonos e incluso automóviles están continuamente conectados a esta red para intercambiar información en tiempo real y hacer más fácil nuestras vidas. ¿A que todo esto te suena familiar?
 								</p>
 							</div>
 						</div>
@@ -107,7 +130,7 @@
 							</div>
 
 							<div class="img">
-								<img src="infor2.png" width="400px" alt="">
+								<img src="img/infor2.png" width="400px" alt="">
 							</div>
 
 							<div class="parraf">
@@ -156,7 +179,7 @@
 							</div>
 
 							<div class="img">
-									<img src="infor3.png" width="400px" alt="">
+									<img src="img/infor3.png" width="400px" alt="">
 								</div>
 
 							<div class="parraf">
