--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 							<div class="imggit">
 								<a href="https://github.com/jocsanex5">
-									<img src="LogoGitHub.jpg" width="100px" alt="">
+									<img src="img/LogoGitHub.jpg" width="100px" alt="">
 								</a>
 							</div>
 						</div>
